# anime-premie-search-bot

./: .env.example  Makefile  README.md  agent.md  pyproject.toml
.github/workflows/: publish-sns.yml  run.yml
data/: events.json
public/: feed.xml  index.html  site.js
src/aggregator/: cli.py  config.py  models.py  pipeline.py
src/aggregator/extraction/: __init__.py  llm_extractor.py  prompts.py
src/aggregator/publishers/: __init__.py  base.py  bluesky.py  gcal.py  rss.py  site.py  text.py  twitter.py
src/aggregator/sources/: __init__.py  animatetimes.py  base.py  ticket_page.py
src/aggregator/storage/: __init__.py  repository.py
templates/site/: base.html  index.html
tests/: test_animatetimes_scraper.py  test_config.py  test_llm_extractor.py  test_models_is_concluded.py  test_repository_dedupe.py  test_rss_generation.py  test_site_generation.py  test_ticket_page.py
tests/fixtures/: animatetimes_article.html  animatetimes_listing.html  animatetimes_listing_page2.html
